--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <div id="container"></div>
-    <div id="status">Cinematic FlappyVerse, made with PIXI and Typescript</div>
+    <div id="status">PixiBird, made with PixiJS and Typescript | <a href="https://github.com/KokoDoko/pixibird.git">Github</a></div>
     <script type="module" src="./ts/Game.ts"></script>
   </body>
 </html>
